--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
 dnspython==2.2.1
 Flask==2.1.3
+idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.1
 pymongo==4.1.1
+requests==2.28.1
+scipy==1.8.1
+urllib3==1.26.10
 Werkzeug==2.1.2
 zipp==3.8.1
-requests==2.28.1
